--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "electron-forge": "^5.2.4",
     "electron-prebuilt-compile": "4.0.0",
     "ember-ajax": "^4.0.1",
+    "ember-auto-import": "^1.2.21",
     "ember-bootstrap": "^2.6.1",
     "ember-cli": "~3.9.0-beta.2",
     "ember-cli-app-version": "^3.2.0",
@@ -60,7 +61,8 @@
   "dependencies": {
     "electron-compile": "^6.4.4",
     "electron-protocol-serve": "^1.3.0",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "snoowrap": "^1.15.2"
   },
   "config": {
     "forge": "./ember-electron/electron-forge-config.js"
