--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.3.1",
     "broccoli-asset-rev": "^2.7.0",
+    "broccoli-funnel": "^2.0.2",
+    "broccoli-merge-trees": "^2.0.1",
     "devtron": "^1.4.0",
     "electron-forge": "^5.2.4",
     "electron-prebuilt-compile": "4.0.0",
@@ -39,6 +41,7 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-nprogress": "^0.3.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
