--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-notifications": "^4.3.3",
     "ember-cli-nprogress": "^0.3.1",
     "ember-cli-sass": "^10.0.0",
     "ember-cli-sri": "^2.1.1",
