--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
+    "ember-content-placeholders": "^1.0.0",
     "ember-data": "~3.9.0-beta.1",
     "ember-electron": "^2.10.0",
     "ember-export-application-global": "^2.0.0",
